# COSC3P95-A2

./: .env.example  .gitignore  Client.java  README.md  Server.java  key.txt  pyproject.toml
assign02/: __init__.py  client.py
files/: 11MB.txt  134KB.txt  15MB.txt  17KB.txt  23MB.txt  25KB.txt  32MB.txt  34MB.txt  477KB.txt  48MB.txt  506KB.txt  52KB.txt  623KB.txt  777KB.txt  77MB.txt  80MB.txt  81MB.txt  82MB.txt  9MB.txt
otel_datafiles/: with-compression-bug.json  with-compression.json  with-encryption-and-compression-bug.json  with-encryption-and-compression.json  with-encryption-bug.json  with-encryption.json  without-advanced-bug.json  without-advanced.json
